fix: fix contrast usage in popover component
affects: @entur/tooltip

--- a/packages/tooltip/src/Popover.scss
+++ b/packages/tooltip/src/Popover.scss
@@ -5,7 +5,6 @@
   box-shadow: $shadows-card-shadow;
   border-radius: $border-radiuses-default;
   border: $border-widths-small solid $colors-greys-grey10;
-  color: inherit;
   font-family: inherit;
   z-index: $z-indexes-popover;
   .eds-contrast & {
